Support for jdk 17